--- a/autres/lineup.html
+++ b/autres/lineup.html
@@ -15,6 +15,7 @@
 <body>
 <!-- ============ header ========== -->
     <header>
+
          <div class="navbar">
             <img src="../assets/img/toggle-white.png" alt="" class="menu-btn shadow">
             <div class="menu-container">
@@ -29,7 +30,7 @@
                 </div>
             </div>
         </div>
-    </header>
+</header>
 
     <!-- ========== fin header ========== -->
     <!-- ========== main ========== -->
@@ -47,71 +48,72 @@
 
             <br>
             <div class=" row row-cols-3 row-cols-md-4 row-cols-lg-6 d-flex justify-content-evenly m-lg-5">
+                
                 <div class="col colx m-1">
                     <a href="./star/1plike140.html"> <img src="../assets/img/1plike140.jpg" alt="1plike140" class="rounded-5">
                     <p class="mt-3">1plike Prime</p></a>
                 </div>
 
                 <div class="col colx m-1">
-                    <img src="../assets/img/fraise.jpg_large" alt="ASAP" class="rounded-5 border-2 ">
+                    <img src="../assets/img/fraise.jpg_large" alt="ASAP" class="rounded-5  ">
                     <p class="mt-3">Fraise OASIS</p>
                 </div>
 
                 <div class="col colx m-1">
-                    <a href="./star/1plike140.html"><img src="../assets/img/Leonide.jpg" alt="Jerry Léonide" class="rounded-5 border-2 ">
+                    <a href="./star/1plike140.html"><img src="../assets/img/Leonide.jpg" alt="Jerry Léonide" class="rounded-5  ">
                         <p class="mt-3">Mr. Léonide</p></a>
                 </div>
 
-                <div class="col colx m-1"><img src="../assets/img/gattouz.png" alt="gattouz" class="rounded-5 border-2 ">
+                <div class="col colx m-1"><img src="../assets/img/gattouz.png" alt="gattouz" class="rounded-5  ">
                     <p class="mt-3">Gattouz</p>
                 </div>
 
                 <div class="col colx m-1">
-                    <img src="../assets/img/fave.jpg" alt="macaron" class="rounded-5 border-2 ">
+                    <img src="../assets/img/fave.jpg" alt="macaron" class="rounded-5  ">
                     <p class="mt-3"> FAVÉÉÉ</p>
                 </div>
 
                 <div class="col colx m-1">
-                    <a href="./star/1plike140.html"><img src="../assets/img/bart.jpg" alt="El Barto" class="rounded-5 border-2 ">
+                    <a href="./star/1plike140.html"><img src="../assets/img/bart.jpg" alt="El Barto" class="rounded-5  ">
                         <p class="mt-3">El Barto</p></a>
                 </div>
 
-                <div class="col colx m-1"><img src="../assets/img/kaaris.PNG" alt="pims" class="rounded-5 border-2 ">
+                <div class="col colx m-1"><img src="../assets/img/kaaris.PNG" alt="pims" class="rounded-5  ">
                     <p class="mt-3">Kaaris</p>
                 </div>
 
-                <div class="col colx m-1"><img src="../assets/img/furry.jpg" alt="ASAP" class="rounded-5 border-2 ">
+                <div class="col colx m-1"><img src="../assets/img/furry.jpg" alt="ASAP" class="rounded-5  ">
                     <p class="mt-3">Timéo la Zanga</p>
                 </div>
 
-                <div class="col colx m-1"><img src="../assets/img/kitty.gif" alt="kitty" class="rounded-5 border-2 ">
+                <div class="col colx m-1"><img src="../assets/img/kitty.gif" alt="kitty" class="rounded-5  ">
                     <p class="mt-3">Hello Kitty</p>
                 </div>
 
-                <div class="col colx m-1"><img src="../assets/img/jew.gif" alt="macaron" class="rounded-5 border-2 ">
+                <div class="col colx m-1"><img src="../assets/img/jew.gif" alt="macaron" class="rounded-5  ">
                     <p class="mt-3">J.E.W.</p>
                 </div>
 
-                <div class="col colx m-1"><img src="../assets/img/bassem.jpg" alt="macaron" class="rounded-5 border-2 ">
+                <div class="col colx m-1"><img src="../assets/img/bassem.jpg" alt="macaron" class="rounded-5  ">
                     <p class="mt-3">Bassem</p>
                 </div>
 
-                <div class="col colx m-1"><img src="../assets/img/frog.jpg" alt="bee" class="rounded-5 border-2 ">
+                <div class="col colx m-1"><img src="../assets/img/frog.jpg" alt="bee" class="rounded-5  ">
                     <p class="mt-3">Crazy Frog</p>
                 </div>
 
                 <div class="col colx m-1">
-                    <img src="../assets/img/kirby.jpg" alt="ASAP" class="rounded-5 border-2 ">
+                    <img src="../assets/img/kirby.jpg" alt="ASAP" class="rounded-5  ">
                     <p class="mt-3">Astérion</p>
                 </div>
 
                 <div class="col colx m-1">
-                    <a href="./star/1plike140.html"><img src="../assets/img/julien.png" alt="julien Naty" class="rounded-5 border-2 ">
+                    <a href="./star/1plike140.html"><img src="../assets/img/julien.png" alt="julien Naty" class="rounded-5  ">
                         <p class="mt-3">Julien Naty</p></a>
                 </div>
 
                 <div class="col colx m-1">
-                    <img src="../assets/img/bee.gif" alt="bee" class="rounded-5 border-2 ">
+                    <img src="../assets/img/bee.gif" alt="bee" class="rounded-5  ">
                     <p class="mt-3">Killer Bee</p>
                 </div>
             </div>
