--- a/autres/infos.html
+++ b/autres/infos.html
@@ -35,81 +35,98 @@
     <!-- ========== main ========== -->
 
     <main class="text-center text-white ">
+        <div class="w-100 vh-100">
+            <div class="p-5">
+                <h1 class="m-5"> OUR ENGAGEMENTS</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab architecto asperiores aspernatur excepturi id, inventore libero magnam minima natus nihil placeat, possimus provident suscipit totam ut veritatis vero vitae. Nobis?adipisicing elit. Amet architecto, autem cum, dolores doloribus esse fugiat illo illum iste iure labore magni modi provident soluta voluptas voluptatibus voluptatum. Omnis, sapiente!</p>
+                <br>
+            </div>
 
-        <div class="p-5">
-            <h1 class="m-5"> OUR ENGAGEMENTS</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab architecto asperiores aspernatur excepturi id, inventore libero magnam minima natus nihil placeat, possimus provident suscipit totam ut veritatis vero vitae. Nobis?adipisicing elit. Amet architecto, autem cum, dolores doloribus esse fugiat illo illum iste iure labore magni modi provident soluta voluptas voluptatibus voluptatum. Omnis, sapiente!</p>
-            <br>
-        </div>
-
-        <div class="box text-white  p-5 vh-60 m-5 shadow ">
-            <h1 class="mb-5"> FREE PALESTINE !</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet architecto, autem cum, dolores doloribus esse fugiat illo illum iste iure labore magni modi provident soluta voluptas voluptatibus voluptatum. Omnis, sapiente!</p>
-            <br>
-            <div class="prog container d-flex justify-content-center w-50">
-                <button type="submit" class="col m-3 text-center text-white">
-                    DONATE NOW
-                </button>
+            <div class="box text-white  p-5 vh-60  shadow ">
+                <h1 class="mb-5"> FREE PALESTINE !</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet architecto, autem cum, dolores doloribus esse fugiat illo illum iste iure labore magni modi provident soluta voluptas voluptatibus voluptatum. Omnis, sapiente!</p>
+                <br>
+                <div class=" container d-flex justify-content-center w-50">
+                    <button type="submit" class="col  text-center text-white">
+                        DONATE NOW
+                    </button>
+                </div>
+            </div>
+            <div class="box p-5 vh-10">
+                <h1 class=" "> WHERE TO FIND US ?</h1>
+                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio obcaecati odit porro repellat totam ut velit. Consequatur dolor doloribus fugit molestiae obcaecati praesentium quos saepe voluptas. Ad delectus eius maiores.</p>
+                <br>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8937.749873045637!2d10.256122351875076!3d36.75407251487173!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12fd49e2ba870e0f%3A0x5ff3585235a59361!2zRm9yw6p0IGRlIFJhZMOocw!5e0!3m2!1sfr!2sfr!4v1742985606016!5m2!1sfr!2sfr"
+                        width="85%"
+                        height="50%"
+                        tyle="border:0;"
+                        allowfullscreen=""
+                        loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"
+                        class="col ">
+                </iframe>
             </div>
         </div>
 
-        <div class=" row row-cols-2 row-cols-md-2 row-cols-lg-5 d-flex justify-content-evenly pt-5 vh-60  ">
-            <div class="col colx  ">
-                <a href="https://www.linkedin.com/in/brouillac/">
-                    <img src="../assets/img/julien.brouillac.jpg" alt="julien" class="rounded-2 border-2 ">
-                  <h2>Julien BROUILLAC</h2>
-                </a>
+        <div class="w-100 vh-50">
+            <div class="row row-cols-2 row-cols-md-2 row-cols-lg-5 d-flex justify-content-evenly pt-5 vh-60  ">
+                <div class=" col colx  ">
+                    <a href="https://www.linkedin.com/in/brouillac/">
+                        <img src="../assets/img/julien.brouillac.jpg" alt="julien" class="rounded-2 border-2  box bg-transparent">
+                      <h2>Julien BROUILLAC</h2>
+                    </a>
+                </div>
+
+                <div class="col colx ">
+                    <a href="https://www.linkedin.com/in/maxime-madureira/">
+                        <img src="../assets/img/maxime.madureira.jpg" alt="Maxime" class="rounded-2 border-2  box bg-transparent">
+                    <h2>Maxime MADUREIRA</h2>
+                    </a>
+                </div>
+
+                <div class="col colx ">
+                    <a href="https://www.linkedin.com/in/chahe-papazian-7584a3282/">
+                        <img src="../assets/img/chahe.papazian.jpg" alt="chahe" class="rounded-2 border-2  box bg-transparent">
+                    <h2>Chahé PAPAZIAN</h2>
+                    </a>
+                </div>
+
+                <div class="col colx ">
+                    <a href="https://www.linkedin.com/in/timeo-laubignat/">
+                        <img src="../assets/img/timéo.gif" alt="timeo" class="rounded-2 border-2  box bg-transparent">
+                      <h2>Timéo LAUBIGNAT</h2>
+                    </a>
+                </div>
             </div>
 
-            <div class="col colx ">
-                <a href="https://www.linkedin.com/in/maxime-madureira/">
-                    <img src="../assets/img/maxime.madureira.jpg" alt="Maxime" class="rounded-2 border-2 ">
-                <h2>Maxime MADUREIRA</h2>
-                </a>
+            <div class="box text-center w-100 ">
+                <h2 class="m-5">CONTACT US :</h2>
+                <form action="traitement.php" method="POST" class="row g-3">
+
+                    <div class="col-md-6 pe-2 ps-2 text-center ">
+                        <input type="text" name="firstName" class="form-control" placeholder="First name :" required>
+                    </div>
+                    <div class="col-md-6 pe-2 ps-2">
+                        <input type="text" name="lastName" class="form-control" placeholder="Last name :" required>
+                    </div>
+
+                    <div class="col-md-6 pe-2 ps-2">
+                        <input type="email" name="email" class="form-control" placeholder="Email :" required>
+                    </div>
+
+                    <div class="col-md-6 pe-2 ps-2">
+                        <input type="number" name="age" class="form-control" placeholder="Age" min="1" max="99" required>
+                    </div>
+
+                    <div class="col-md-12 pe-2 ps-2">
+                        <textarea name="message" class="form-control" placeholder="Message :" required rows="4" style="resize: none;"></textarea>
+                    </div>
+
+                    <div class="">
+                        <button type="submit" class="w-50">SUBMIT</button>
+                    </div>
+                </form>
             </div>
-
-            <div class="col colx ">
-                <a href="https://www.linkedin.com/in/chahe-papazian-7584a3282/">
-                    <img src="../assets/img/chahe.papazian.jpg" alt="chahe" class="rounded-2 border-2 ">
-                <h2>Chahé PAPAZIAN</h2>
-                </a>
-            </div>
-
-            <div class="col colx ">
-                <a href="https://www.linkedin.com/in/timeo-laubignat/">
-                    <img src="../assets/img/timéo.gif" alt="timeo" class="rounded-2 border-2 ">
-                  <h2>Timéo LAUBIGNAT</h2>
-                </a>
-            </div>
-        </div>
-
-        <div class="box text-center w-100 mb-5">
-            <h2 class="m-5">CONTACT US :</h2>
-            <form action="traitement.php" method="POST" class="row g-3">
-
-                <div class="col-md-6 pe-2 ps-2 text-center ">
-                    <input type="text" name="firstName" class="form-control" placeholder="First name :" required>
-                </div>
-                <div class="col-md-6 pe-2 ps-2">
-                    <input type="text" name="lastName" class="form-control" placeholder="Last name :" required>
-                </div>
-
-                <div class="col-md-6 pe-2 ps-2">
-                    <input type="email" name="email" class="form-control" placeholder="Email :" required>
-                </div>
-
-                <div class="col-md-6 pe-2 ps-2">
-                    <input type="number" name="age" class="form-control" placeholder="Age" min="1" max="99" required>
-                </div>
-
-                <div class="col-md-12 pe-2 ps-2">
-                    <textarea name="message" class="form-control" placeholder="Message :" required rows="4" style="resize: none;"></textarea>
-                </div>
-
-                <div class="">
-                    <button type="submit" class="w-50">SUBMIT</button>
-                </div>
-            </form>
         </div>
     </main>
     <!-- ========== fin main ========== -->
